--- a/about/index.html
+++ b/about/index.html
@@ -5,9 +5,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre</title>
+  <title>Sobre mim DEV Giovani Bontempo</title>
   <meta name="description" value="">
   <link rel="stylesheet" href="/global.css" />
+
+  <meta property="og:description" content="Conheça meu trabalho como desenvolvedor.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/gio-bon/gio-bon.github.io/main/assets/profile.jpeg">
+  <meta property="og:url" content="https://gio-bon.github.io/">
+  <meta property="og:title" content="DEV Giovani Bontempo">
+  <meta property="og:type" content="website">
+  
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +26,11 @@
   <div class="navbar bg-base-100">
   <div class="navbar-start">
 
-    <a href="/" class="btn btn-ghost text-2xl prose">Giovani.</a>
+    <a href="/" class="btn btn-ghost text-2xl prose">Giovani</a>
 
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-1 w-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-        </svg>
+        <span class="icon-[fontisto--nav-icon]"></span>
       </div>
 
       <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
