--- a/projects/index.html
+++ b/projects/index.html
@@ -30,7 +30,7 @@
 
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-        <span class="icon-[fontisto--nav-icon]"></span>
+        Menu
       </div>
 
       <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
